--- a/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
@@ -1,13 +1,13 @@
 ---
 syncID: 1c45b4a12e2a47f081c86f167059fad5
 title: "Raster 04: Work With Multi-Band Rasters - Image Data in R"	
-description: "This tutorial explores how to import and plot a multi-band raster in R. It also covers how to plot a three-band color image using the plotRGB function in R."	
-dateCreated:2015-10-23
+description: "Import and plot each band and all bands of a three-band raster in R."	
+dateCreated: 2015-10-23
 authors: Leah A. Wasser, Megan A. Jones, Zack Brym, Kristina Riemer, Jason Williams, Jeff Hollister,  Mike Smorul	
-contributors:	Jason Brown
+contributors:	Jason Brown, Bridget Hass
 estimatedTime: 1 hour
-packagesLibraries: raster, rgdal
-topics: data-viz, raster, spatial-data-gis
+packagesLibraries: terra, neonUtilities, RColorBrewer
+topics: data-viz, raster, spatial-data-gis, camera imagery
 subtopics: 
 languagesTool: R
 dataProduct: DP1.30010.001
@@ -17,7 +17,7 @@ urlTitle: dc-multiband-rasters-r
 
 ---
 
-This tutorial explores how to import and plot a multi-band raster in
+This tutorial explores how to import and plot a multiband raster in
 R. It also covers how to plot a three-band color image using the `plotRGB()`
 function in R.
 
@@ -26,53 +26,41 @@ function in R.
 ## Learning Objectives
 After completing this tutorial, you will be able to:
 
-* Know how to identify a single vs. a multi-band raster file.
-* Be able to import multi-band rasters into R using the `raster` package.
-* Be able to plot multi-band color image rasters in R using `plotRGB()`.
+* Know how to identify a single vs. a multiband raster file.
+* Be able to import multiband rasters into R using the `terra` package.
+* Be able to plot multiband color image rasters in R using `plotRGB()`.
 * Understand what a `NoData` value is in a raster.
 
 ## Things You’ll Need To Complete This Tutorial
-You will need the most current version of R and, preferably, `RStudio` loaded
-on your computer to complete this tutorial.
+You will need the most current version of R and, preferably, `RStudio` installed on your computer to complete this tutorial.
 
 ### Install R Packages
 
-* **raster:** `install.packages("raster")`
-* **rgdal:** `install.packages("rgdal")`
+* **terra:** `install.packages("terra")`
+* **neonUtilities:** `install.packages("neonUtilities")`
+
 
 * <a href="https://www.neonscience.org/packages-in-r" target="_blank"> More on Packages in R </a>– Adapted from Software Carpentry.
 
 #### Data to Download
 
-<h3> <a href="https://ndownloader.figshare.com/files/3701578"> NEON Teaching Data Subset: Airborne Remote Sensing Data </a></h3>
+Data required for this tutorial will be downloaded using `neonUtilities` in the lesson.
 
-The LiDAR and imagery data used to create this raster teaching data subset 
-were collected over the 
+The LiDAR and imagery data used in this lesson were collected over the 
 <a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network's</a> 
-<a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank" >Harvard Forest</a>
-and 
-<a href="https://www.neonscience.org/field-sites/field-sites-map/SJER" target="_blank" >San Joaquin Experimental Range</a>
-field sites and processed at NEON headquarters. 
-The entire dataset can be accessed by request from the 
-<a href="http://data.neonscience.org" target="_blank"> NEON Data Portal</a>.
+<a href="https://www.neonscience.org/field-sites/HARV" target="_blank" >Harvard Forest (HARV)</a> field site. 
 
-<a href="https://ndownloader.figshare.com/files/3701578" class="link--button link--arrow"> Download Dataset</a>
-
-
+The entire dataset can be accessed from the <a href="http://data.neonscience.org" target="_blank">NEON Data Portal</a>.
 
 
 
 ****
 
-**Set Working Directory:** This lesson assumes that you have set your working 
-directory to the location of the downloaded and unzipped data subsets. 
+**Set Working Directory:** This lesson assumes that you have set your working directory to the location of the downloaded and unzipped data subsets. 
 
-<a href="https://www.neonscience.org/set-working-directory-r" target="_blank"> An overview
-of setting the working directory in R can be found here.</a>
+<a href="https://www.neonscience.org/set-working-directory-r" target="_blank"> An overview of setting the working directory in R can be found here.</a>
 
-**R Script & Challenge Code:** NEON data lessons often contain challenges that reinforce 
-learned skills. If available, the code for challenge solutions is found in the
-downloadable R script of the entire lesson, available in the footer of each lesson page.
+**R Script & Challenge Code:** NEON data lessons often contain challenges that reinforce skills. If available, the code for challenge solutions is found in the downloadable R script of the entire lesson, available in the footer of each lesson page.
 
 
 </div>
@@ -82,42 +70,32 @@ downloadable R script of the entire lesson, available in the footer of each less
 <iframe width="640" height="360" src="https://www.youtube.com/embed/3iaFzafWJQE" frameborder="0" allowfullscreen></iframe>
 
 ## About Raster Bands in R 
-As discussed in the
-<a href="https://www.neonscience.org/dc-raster-data-r" target="_blank"> *Intro to Raster Data* tutorial</a>, 
+As discussed in the <a href="https://www.neonscience.org/dc-raster-data-r" target="_blank"> *Intro to Raster Data* tutorial</a>, 
 a raster can contain 1 or more bands.
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/single_multi_raster.png">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/single_multi_raster.png"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/single_multi_raster.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/single_multi_raster.png"
     alt="Left: 3D image of a raster with only one band. Right: 3D image showing four separate layers of a multi band raster.">
     </a>
-    <figcaption>A raster can contain one or more bands. We can use the
-    raster function to import one single band from a single OR multi-band
-    raster.  Source: National Ecological Observatory Network (NEON).</figcaption>
+    <figcaption>A raster can contain one or more bands. We can use the terra `rast` function to import one single band from a single OR multi-band
+    raster. Source: National Ecological Observatory Network (NEON).</figcaption>
 </figure>
 
-To work with multi-band rasters in R, we need to change how we import and plot
-our data in several ways. 
+To work with multi-band rasters in R, we need to change how we import and plot our data in several ways. 
 
 * To import multi band raster data we will use the `stack()` function.
-* If our multi-band data are imagery that we wish to composite, we can use
-`plotRGB()` (instead of `plot()`) to plot a 3 band raster image.
+* If our multi-band data are imagery that we wish to composite, we can use `plotRGB()` (instead of `plot()`) to plot a 3 band raster image.
 
 ## About Multi-Band Imagery
-One type of multi-band raster dataset that is familiar to many of us is a color 
-image. A basic color image consists of three bands: red, green, and blue. Each
-band represents light reflected from the red, green or blue portions of the
-electromagnetic spectrum. The pixel brightness for each band, when composited
-creates the colors that we see in an image. 
+One type of multi-band raster dataset that is familiar to many of us is a color image. A basic color image consists of three bands: red, green, and blue. Each band represents light reflected from the red, green or blue portions of the electromagnetic spectrum. The pixel brightness for each band, when composited creates the colors that we see in an image. 
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/hyperspectral-general/RGBSTack_1.jpg">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/hyperspectral-general/RGBSTack_1.jpg"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/RGBSTack_1.jpg">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/RGBSTack_1.jpg"
     alt="A graphic depicting the three different color bands (red, green, and blue) of a satellite image and how they create a basic color image when composited."></a>
-    <figcaption>A color image consists of 3 bands - red, green and blue. When
-    rendered together in a GIS, or even a tool like Photoshop or any other
-    image software, they create a color image. 
-	Source: National Ecological Observatory Network (NEON).  
+    <figcaption>A color image consists of 3 bands - red, green and blue. When rendered together in a GIS, or even a tool like Photoshop or any other
+    image software, they create a color image. Source: National Ecological Observatory Network (NEON).  
     </figcaption>
 </figure>
 
@@ -127,77 +105,75 @@ packages.
 
 ```{r load-libraries }
 
-# work with raster data
-library(raster)
-# export GeoTIFFs and other core GIS functions
-library(rgdal)
+# terra package to work with raster data
+library(terra)
+
+# package for downloading NEON data
+library(neonUtilities)
+
+# package for specifying color palettes
+library(RColorBrewer)
 
 # set working directory to ensure R can find the file we wish to import
-wd <- "~/Git/data/" # this will depend on your local environment environment
+wd <- "~/data/" # this will depend on your local environment environment
 # be sure that the downloaded file is in this directory
 setwd(wd)
 
 ```
 
-In this tutorial, the multi-band data that we are working with is imagery
-collected using the 
+In this tutorial, the multi-band data that we are working with is imagery collected using the 
 <a href="https://www.neonscience.org/data-collection/airborne-remote-sensing" target="_blank">NEON Airborne Observation Platform</a>
-high resolution camera over the 
-<a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank">NEON Harvard Forest field site</a>. 
-Each RGB image is a 3-band raster. The same steps would apply to 
-working with a multi-spectral image with 4 or more bands - like Landsat imagery.
-We can plot each band of a multi-band image individually. 
+high resolution camera over the <a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank">NEON Harvard Forest field site</a>. Each RGB image is a 3-band raster. The same steps would apply to working with a multi-spectral image with 4 or more bands - like Landsat imagery, or even hyperspectral imagery (in geotiff format). We can plot each band of a multi-band image individually. 
 
 <div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** In many GIS applications, a single band 
-would render as a single image in grayscale. We will therefore use a grayscale 
-palette to render individual bands. 
+<i class="fa fa-star"></i> **Data Tip:** In many GIS applications, a single band would render as a single image in grayscale. We will therefore use a grayscale palette to render individual bands. 
 </div>
 
-```{r demonstrate-RGB-Image, fig.cap="Red, green, and blue bands of NEON's site Harvard Forest", echo=FALSE}
-# Use stack function to read in all bands
-RGB_stack_HARV <- 
-  stack(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"))
+```{r download-harv-camera-data}
 
-names(RGB_stack_HARV) <- c("Red Band","Green Band","Blue Band")
-
-grayscale_colors <- gray.colors(100, 
-                                start = 0.0, 
-                                end = 1.0, 
-                                gamma = 2.2, 
-                                alpha = NULL)
-
-# Create an RGB image from the raster stack
-plot(RGB_stack_HARV, 
-     col=grayscale_colors,
-     axes=F)
+byTileAOP(dpID='DP3.30010.001', # rgb camera data
+          site='HARV',
+          year='2022',
+          easting=732000,
+          northing=4713500,
+          check.size=FALSE, # set to TRUE or remove if you want to check the size before downloading
+          savepath = wd)
 
 ```
 
-Or we can composite all three bands together to make a color image.
+```{r demonstrate-RGB-Image, fig.cap="Red, green, and blue composite (true color) image of NEON's Harvard Forest (HARV) site", echo=FALSE}
 
-```{r plot-RGB-now, fig.cap="Composite image of NEON's site Harvard Forest", echo=FALSE, message=FALSE}
-# Create an RGB image from the raster stack
+# read the file as a raster
+rgb_harv_file <- paste0(wd, "DP3.30010.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/Camera/Mosaic/2022_HARV_7_732000_4713000_image.tif")
+RGB_HARV <- rast(rgb_harv_file)
 
-original_par <-par() # create original par for easy reversal at end
-par(col.axis="white",col.lab="white",tck=0)
-plotRGB(RGB_stack_HARV, r = 1, g = 2, b = 3,
-        axes=TRUE, 
-        main="3 Band Color Composite Image\n NEON Harvard Forest Field Site")
-box(col="white")
+# Create an RGB image from the raster using the terra "plot" function. Note "plot" shows the same image, since there are 3 bands
+plotRGB(RGB_HARV, axes=F)
+# plot(RGB_HARV, axes=F) < this gives the same result as plotRGB
 
 ```
 
-In a multi-band dataset, the rasters will always have the same *extent*,
-*CRS* and *resolution*.  
+Or we can plot each bands separately as follows:
 
-```{r reset-par, echo=FALSE, results="hide", warning=FALSE}
-par(original_par) # go back to original par
+```{r plot-RGB-now, fig.cap="Red, green, and blue bands of the camera imagery at NEON's Harvard Forest (HARV) site", echo=FALSE, message=FALSE}
 
+# Determine the number of bands
+num_bands <- nlyr(RGB_HARV)
+
+# Define colors to plot each
+# Define color palettes for each band using RColorBrewer
+colors <- list(
+  brewer.pal(9, "Reds"),
+  brewer.pal(9, "Greens"),
+  brewer.pal(9, "Blues")
+)
+
+# Plot each band in a loop, with the specified colors
+for (i in 1:num_bands) {
+  plot(RGB_HARV[[i]], main=paste("Band", i), col=colors[[i]])
+}
 ```
-
-If we read a `rasterStack` into R using the `raster()` function, it only reads
-in the first band. We can plot this band using the plot function. 
+Let's take a look at some attributes of this multiband raster. In a multiband dataset, each band of the raster will always have the same *extent*, *CRS* and *resolution*.  
 
 ```{r read-single-band, fig.cap="Red band of NEON's site Harvard Forest"}
  
@@ -238,61 +214,72 @@ raster object can also be determined using the `nbands` slot. Syntax is
 `ObjectName@file@nbands`, or specifically for our file: `RGB_band1_HARV@file@nbands`.
 </div>
 
-### Image Raster Data Values
-Let's next examine the raster's min and max values. What is the value range?
+### Image Raster Data Attributes
+
+``` {r raster-attributes}
+# Print dimensions
+cat("Dimensions:\n")
+cat("Number of rows:", nrow(RGB_HARV), "\n")
+cat("Number of columns:", ncol(RGB_HARV), "\n")
+cat("Number of layers:", nlyr(RGB_HARV), "\n")
+
+# Print resolution
+resolutions <- res(RGB_HARV)
+cat("Resolution:\n")
+cat("X resolution:", resolutions[1], "\n")
+cat("Y resolution:", resolutions[2], "\n")
+
+# Get the extent of the raster
+rgb_extent <- ext(RGB_HARV)
+
+# Convert the extent to a string with rounded values
+extent_str <- sprintf("xmin: %d, xmax: %d, ymin: %d, ymax: %d", 
+                      round(xmin(rgb_extent)), 
+                      round(xmax(rgb_extent)), 
+                      round(ymin(rgb_extent)), 
+                      round(ymax(rgb_extent)))
+
+# Print the extent string
+cat("Extent of the raster: \n")
+cat(extent_str, "\n")
+
+```
+Let's take a look at the coordinate reference system, or CRS. You can use the parameters `describe=TRUE` to display this information more succinctly.
+
+``` {r print-CRS}
+crs(RGB_HARV, describe=TRUE)
+```
+
+Let's next examine the raster's minimum and maximum values. What is the range of values for each band?
 
 ```{r min-max-image }
-# view min value
-minValue(RGB_band1_HARV)
 
-# view max value
-maxValue(RGB_band1_HARV)
+# Replace Inf and -Inf with NA
+values(RGB_HARV)[is.infinite(values(RGB_HARV))] <- NA
+
+# Get min and max values for all bands
+min_max_values <- minmax(RGB_HARV)
+
+# Print the results
+cat("Min and Max Values for All Bands:\n")
+print(min_max_values)
 ```
 
-This raster contains values between 0 and 255. These values 
-represent degrees of brightness associated with the image band. In 
-the case of a RGB image (red, green and blue), band 1 is the red band. When
-we plot the red band, larger numbers (towards 255) represent pixels with more
-red in them (a strong red reflection). Smaller numbers (towards 0) represent
-pixels with less red in them (less red was reflected). To 
-plot an RGB image, we mix red + green + blue values into one single color to
-create a full color image - similar to the color image a digital camera creates.
-
-### Import A Specific Band
-We can use the `raster()` function to import specific bands in our raster object
-by specifying which band we want with `band=N` (N represents the band number we
-want to work with). To import the green band, we would use `band=2`.
-
-```{r read-specific-band, fig.cap="Green band of NEON's site Harvard Forest"}
-# Can specify which band we want to read in
-RGB_band2_HARV <- 
-  raster(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"), 
-           band = 2)
-
-# plot band 2
-plot(RGB_band2_HARV,
-     col=grayscale_colors, # we already created this palette & can use it again
-     axes=FALSE,
-     main="RGB Imagery - Band 2- Green\nNEON Harvard Forest Field Site")
-
-# view attributes of band 2 
-RGB_band2_HARV
-
-```
-
-Notice that band 2 is the second of 3 bands `band: 2  (of  3  bands)`.  
+This raster contains values between 0 and 255. These values represent the intensity of brightness associated with the image band. In 
+the case of a RGB image (red, green and blue), band 1 is the red band. When we plot the red band, larger numbers (towards 255) represent 
+pixels with more red in them (a strong red reflection). Smaller numbers (towards 0) represent pixels with less red in them (less red was reflected). 
+To plot an RGB image, we mix red + green + blue values into one single color to create a full color image - this is the standard color image a digital camera creates.
 
 <div id="ds-challenge" markdown="1">
-### Challenge: Making Sense of Single Band Images
-Compare the plots of band 1 (red) and band 2 (green). Is the forested area
-darker or lighter in band 2 (the green band) compared to band 1 (the red band)?  
+### Challenge: Making Sense of Single Bands of a Multi-Band Image
+Go back to the code chunk where you plotted each band separately. Compare the plots of band 1 (red) and band 2 (green). Is the forested area darker or lighter in band 2 (the green band) compared to band 1 (the red band)?  
+
 </div>
 
 ```{r challenge1-answer, eval=FALSE, echo=FALSE }
 
-# We'd expect a *brighter* value for the forest in band 2 (green) than in 
-# band 1 (red) because the leaves on trees of most often appear "green" - 
-# healthy leaves reflect MORE green light compared to red light 
+# We'd expect a *brighter* value for the forest in band 2 (green) than in # band 1 (red) because the leaves on trees of most often appear "green" - 
+# healthy leaves reflect MORE green light compared to red light.
 
 ```
 
@@ -300,94 +287,15 @@ darker or lighter in band 2 (the green band) compared to band 1 (the red band)?
 
 Multi-band raster data might also contain:
 
-1. **Time series:** the same variable, over the same area, over time. Check out 
-<a href="https://www.neonscience.org/dc-raster-time-series-r" target="_blank"> *Raster Time Series Data in R* tutorial </a>
-to learn more about time series stacks.
-2. **Multi or hyperspectral imagery:** image rasters that have 4 or more
-(multi-spectral) or more than 10-15 (hyperspectral) bands. Check out the NEON
-Data Skills
-<a href="https://www.neonscience.org/hsi-hdf5-r" target="_blank"> **Imaging Spectroscopy HDF5 in R** tutorial</a> 
-tutorial for more about working with hyperspectral data cubes.
+1. **Time series:** the same variable, over the same area, over time. 
+2. **Multi or hyperspectral imagery:** image rasters that have 4 or more (multi-spectral) or more than 10-15 (hyperspectral) bands. Check out the NEON
+Data Skills <a href="https://www.neonscience.org/hsi-hdf5-r" target="_blank"> **Imaging Spectroscopy HDF5 in R** </a> tutorial to learn how to work with hyperspectral data cubes.
 
-## Raster Stacks in R
-Next, we will work with all three image bands (red, green and blue) as an R
-`RasterStack` object. We will then plot a 3-band composite, or full color,
-image. 
-
-To bring in all bands of a multi-band raster, we use the`stack()` function.
-
-```{r intro-to-raster-stacks }
-
-# Use stack function to read in all bands
-RGB_stack_HARV <- 
-  stack(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"))
-
-# view attributes of stack object
-RGB_stack_HARV
-
-```
-
-We can view the attributes of each band the stack using `RGB_stack_HARV@layers`.
-Or we if we have hundreds of bands, we can specify which band we'd like to view 
-attributes for using an index value: `RGB_stack_HARV[[1]]`. We can also use the
- `plot()` and `hist()` functions on the `RasterStack` to plot and view the
- distribution of raster band values.
-
-```{r plot-raster-layers, fig.cap=c("Histograms of each RGB band showing the distribution of values for NEON's site Harvard Forest","Raster of each RGB band for NEON's site Harvard Forest","Band 2 of NEON's site Harvard Forest")}
-# view raster attributes
-RGB_stack_HARV@layers
-
-# view attributes for one band
-RGB_stack_HARV[[1]]
-
-# view histogram of all 3 bands
-hist(RGB_stack_HARV,
-     maxpixels=ncell(RGB_stack_HARV))
-
-# plot all three bands separately
-plot(RGB_stack_HARV, 
-     col=grayscale_colors)
-
-# revert to a single plot layout 
-par(mfrow=c(1,1)) 
-
-# plot band 2 
-plot(RGB_stack_HARV[[2]], 
-     main="Band 2\n NEON Harvard Forest Field Site",
-     col=grayscale_colors)
-
-```
-
-
-### Create A Three Band Image
-To render a final 3 band, color image in R, we use `plotRGB()`.
-
-This function allows us to:
-
-1. Identify what bands we want to render in the red, green and blue regions. The 
-`plotRGB()` function defaults to a 1=red, 2=green, and 3=blue band order. However, 
-you can define what bands you'd like to plot manually. Manual definition of
-bands is useful if you have, for example a near-infrared band and want to create
-a color infrared image.
-2. Adjust the `stretch` of the image to increase or decrease contrast.
-
-Let's plot our 3-band image.
-
-```{r plot-rgb-image, fig.cap="Composite RGB image of NEON's site Harvard Forest"}
-
-# Create an RGB image from the raster stack
-plotRGB(RGB_stack_HARV, 
-        r = 1, g = 2, b = 3)
-
-```
-
-The image above looks pretty good. We can explore whether applying a stretch to
-the image might improve clarity and contrast using  `stretch="lin"` or 
-`stretch="hist"`.  
+The true color image plotted at the beginning of this lesson looks pretty decent. We can explore whether applying a stretch to the image might improve clarity and contrast using  `stretch="lin"` or `stretch="hist"`.  
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/imageStretch_dark.jpg">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/imageStretch_dark.jpg"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/imageStretch_dark.jpg">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/imageStretch_dark.jpg"
     alt="Graphic depicting stretching pixel brightness values to make a dark satellite image brighter">
     </a>
     <figcaption>When the range of pixel brightness values is closer to 0, a
@@ -398,138 +306,33 @@ the image might improve clarity and contrast using  `stretch="lin"` or
 </figure>
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/imageStretch_light.jpg">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/imageStretch_light.jpg"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/imageStretch_light.jpg">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/imageStretch_light.jpg"
     alt="Graphic depicting stretching pixel brightness values to make a bright satellite image darker">
     </a>
-    <figcaption>When the range of pixel brightness values is closer to 255, a
-    lighter image is rendered by default. We can stretch the values to extend to
-    the full 0-255 range of potential values to increase the visual contrast of
-    the image.
+    <figcaption>When the range of pixel brightness values is closer to 255, a lighter image is rendered by default. We can stretch the values to extend     to the full 0-255 range of potential values to increase the visual contrast of the image.
     </figcaption>
 </figure>
 
-```{r image-stretch, fig.cap=c("Composite RGB image of NEON's site Harvard Forest", "Composite RGB image of NEON's site Harvard Forest with slightly more contrast")}
+```{r image-stretch, fig.cap=c("Composite RGB image of HARV with a linear stretch", "Composite RGB image of HARV with a histogram stretch")}
+# What does stretch do?
 
-# what does stretch do?
-plotRGB(RGB_stack_HARV,
-        r = 1, g = 2, b = 3, 
-        scale=800,
-        stretch = "lin")
+# Plot the linearly stretched raster
+plotRGB(RGB_HARV_lin_stretch, stretch="lin")
 
-plotRGB(RGB_stack_HARV,
-        r = 1, g = 2, b = 3, 
-        scale=800,
-        stretch = "hist")
+# Plot the histogram-stretched raster
+plotRGB(RGB_HARV_lin_stretch, stretch="hist")
 
 ```
 
-In this case, the stretch doesn't enhance the contrast our image significantly
-given the distribution of reflectance (or brightness) values is distributed well
-between 0 and 255.
-
-<div id="ds-challenge" markdown="1">
-## Challenge - NoData Values
-Let's explore what happens with NoData values when using `RasterStack` and
-`plotRGB`. We will use the `HARV_Ortho_wNA.tif` GeoTIFF in the
-`NEON-DS-Airborne-Remote-Sensing/HARVRGB_Imagery/` directory.
-
-1. View the files attributes. Are there `NoData` values assigned for this file? 
-2. If so, what is the `NoData` Value? 
-3. How many bands does it have?
-4. Open the multi-band raster file in R. 
-5. Plot the object as a true color image. 
-6. What happened to the black edges in the data?
-7. What does this tell us about the difference in the data structure between  
-`HARV_Ortho_wNA.tif` and `HARV_RGB_Ortho.tif` (R object `RGB_stack`). How can
-you check?
-
-Answer the questions above using the functions we have covered so far in this
-tutorial.
-
-</div>
-
-``` {r challenge-code-NoData, fig.cap="Composite RGB image of NEON's site Harvard Forest with NAvalues removed", echo=FALSE, results="hide"}
-# 1.
-# view attributes
-GDALinfo(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_Ortho_wNA.tif"))
-
-# 2 Yes it has NoData values as they are assigned as -9999 
-# 3 3 bands
-
-# 4
-# reading in file
-HARV_NA<- 
-  stack(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_Ortho_wNA.tif"))
-
-# 5
-plotRGB(HARV_NA, 
-        r = 1, g = 2, b = 3)
-
-#6 The black edges are not plotted. 
-#7 Both have NoData values, however, in RGB_stack the NoData value is not
-# defined in the tiff tags, thus R renders them as black as the reflectance
-# values are 0. The black edges in the other file are defined as -9999 and R
-# renders them as NA.
-GDALinfo(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"))
-
-```
-
-<div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** We can create a RasterStack from 
-several, individual single-band GeoTIFFs too. Check out:
-<a href="https://www.neonscience.org/dc-raster-time-series-r" target="_blank"> *Raster Time Series Data in R* </a>
-for a tutorial on how to do this.  
-</div>
-
-## RasterStack vs RasterBrick in R
-
-The R `RasterStack` and `RasterBrick` object types can both store multiple bands.
-However, how they store each band is different. The bands in a `RasterStack` are
-stored as links to raster data that is located somewhere on our computer. A 
-`RasterBrick` contains all of the objects stored within the actual R object.
-In most cases, we can work with a `RasterBrick` in the same way we might work
-with a `RasterStack`. However a `RasterBrick` is often more efficient and faster
-to process - which is important when working with larger files.
-
-
-We can turn a `RasterStack` into a `RasterBrick` in R by using
-`brick(StackName)`. Let's use the `object.size()` function to compare `stack` 
-and `brick` R objects.
-
-```{r raster-bricks, fig.cap="Composite RGB image of NEON's site Harvard Forest"}
-
-# view size of the RGB_stack object that contains our 3 band image
-object.size(RGB_stack_HARV)
-
-# convert stack to a brick
-RGB_brick_HARV <- brick(RGB_stack_HARV)
-
-# view size of the brick
-object.size(RGB_brick_HARV)
-
-```
-
-Notice that in the `RasterBrick`, all of the bands are stored within the actual 
-object. Thus, the `RasterBrick` object size is much larger than the
-`RasterStack` object. 
-
-You use `plotRGB` to block a `RasterBrick` too. 
-
-``` {r plot-brick}
-# plot brick
-plotRGB(RGB_brick_HARV)
-
-```
-
+In this case, the stretch doesn't enhance the contrast our image significantly given the distribution of reflectance (or brightness) values is distributed well between 0 and 255, and applying a stretch appears to introduce some artificial, almost purple-looking brightness to the image.
 
 <div id="ds-challenge" markdown="1">
 ### Challenge: What Methods Can Be Used on an R Object?
-We can view various methods available to call on an R object with 
-`methods(class=class(objectNameHere))`. Use this to figure out:
+We can view various methods available to call on an R object with `methods(class=class(objectNameHere))`. Use this to figure out:
 
-1. What methods can be used to call on the `RGB_stack_HARV` object? 
-2. What methods are available for a single band within `RGB_stack_HARV`? 
+1. What methods can be used to call on the `RGB_HARV` object? 
+2. What methods are available for a single band within `RGB_HARV`? 
 3. Why do you think there is a difference? 
 
 </div>
@@ -537,14 +340,13 @@ We can view various methods available to call on an R object with
 ``` {r challenge-code-calling-methods, include=TRUE, results="hide", echo=FALSE}
 # 1
 # methods for calling a stack
-methods(class=class(RGB_stack_HARV))
-# 143 methods!
+methods(class=class(RGB_HARV))
+# 304 methods!
 
 # 2
-# methods for calling a band (1) with a stack
-methods(class=class(RGB_stack_HARV[1]))
+# methods for calling a band (1)
+methods(class=class(RGB_HARV[1]))
 
-#3 There are far more thing one could or wants to ask of a full stack than of 
-# a single band.  
+# 72 There are more methods you can apply to a full stack (304) than you can apply to a single band (72).
 ```
 
